--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Willi's Chocolat Shop</title>
 </head>
 <body>
     <div class="container">
         <header>
             <nav>
+                <h1>Willi's Chocolat Shop.</h1>
                 <ul>
-                    <li>Home</li>
+                    <li class="active"><a href="./index.html">Home</a></li>
+                    <li><a href="./produtos.html">Produtos</a></li>
+                    <li><a href="./sobre.html">Sobre</a></li>
+                    <li><a href="./swot.html">SWOT</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
+            <div class="main-box">
+                <div class="text-box">
 
+                    <h1>Bem-vindo a nossa loja!</h1>
+
+                    <p>
+                        No coração do litoral norte de São Paulo, nossa loja é um verdadeiro refúgio para os amantes de chocolates artesanais. Trabalhamos com uma equipe talentosa e apaixonada para oferecer produtos de alta qualidade e exclusivos. Cada detalhe, desde a seleção do cacau até a embalagem final, é cuidadosamente planejado para proporcionar uma experiência sensorial única.
+
+                    </p>
+
+                </div>
+               
+
+                <img src="./imgs/willis.jpg">
+            </div>
         </main>
         <footer>
 
